Tests execute!
Well, code compiles and the minimalGraphLoads text executed and was green